--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body {
   padding: 0;
   font-family: "Poppins", sans-serif;
 }
+h1,
+h2,
+h3 {
+  margin: 0;
+  padding: 0;
+}
 a {
   text-decoration: none;
 }
@@ -36,11 +42,18 @@ section {
   text-align: center;
 }
 
-/* ===== Banner Section Start ===== */
+/* ===== Banner Section  ===== */
 
-/* ===== About Section Start ===== */
+/* ===== About Section  ===== */
 .about-section {
   background-image: url(images/banner.png);
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+/* ===== Footer Section  ===== */
+footer {
+  background-image: linear-gradient(45deg, #fe4a2ebd, #d35e04);
+  padding: 35px;
+  color: #f8f8f8;
 }
