--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ span {
 img {
   display: block;
   width: 100%;
+  object-fit: cover;
 }
 section {
   padding: 100px 80px;
@@ -45,12 +46,31 @@ section {
 .mr-3 {
   margin-right: 3%;
 }
+
+/* Padding left  */
+.pl-3 {
+  padding-left: 3%;
+}
 /* text-center */
 .text-center {
   text-align: center;
 }
 
-/* Navbar area */
+/* Button  */
+.btn {
+  display: inline-block;
+  padding: 10px 40px;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+  background-image: linear-gradient(112.1deg, #ff1e1e, #d16806);
+  margin-top: 18px;
+  color: #fff;
+}
+
+/* ===== Navbar area ===== */
 .navbar-area {
   padding: 10px 80px;
   display: flex;
@@ -67,9 +87,20 @@ nav ul li {
 nav ul li a {
   display: inline-block;
   font-size: 18px;
+  color: #575757;
+  font-weight: 500;
 }
 
 /* ===== Banner Section  ===== */
+.banner-left h1 {
+  font-size: 50px;
+  font-weight: 600;
+}
+.banner-left p {
+  font-size: 18px;
+  color: #828282;
+  margin: 12px 0;
+}
 
 /* ===== About Section  ===== */
 .about-section {
@@ -77,12 +108,131 @@ nav ul li a {
   background-size: cover;
   background-repeat: no-repeat;
 }
+.about-right h2 {
+  font-weight: 500;
+  font-size: 35px;
+}
+.about-right p {
+  margin: 10px 0;
+  color: #1b191f;
+  font-size: 18px;
+}
 
+/* //// For all section Top Content  //////*/
+.top-content h2 {
+  font-size: 35px;
+  color: #676767;
+  margin-bottom: 17px;
+}
+.top-content p {
+  font-size: 18px;
+  color: #252525;
+  width: 68%;
+  margin: 10px auto 30px;
+}
+
+/*  Recipie Section */
+.recipie-items-container {
+  align-items: stretch;
+}
+.recipie-item {
+  margin-top: 20px;
+  padding: 20px;
+  align-items: stretch;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+  box-shadow: 10px 10px 30px 10px rgba(0, 0, 0, 0.15);
+}
+.recipie-item img {
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+}
+.recipie-item h3 {
+  font-size: 24px;
+  color: #1b191f;
+  margin: 15px 0;
+}
+.recipie-item p {
+  font-size: 18px;
+  color: #676767;
+}
+
+/* ===== Counter Section ===== */
+.counter-section {
+  background-image: linear-gradient(112.1deg, #ff1e1ee3, #d16806d8);
+}
+.counter-item {
+  padding: 50px;
+  background: #f8f8f8;
+  border-radius: 45px;
+  -webkit-border-radius: 45px;
+  -moz-border-radius: 45px;
+  -ms-border-radius: 45px;
+  -o-border-radius: 45px;
+  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.25);
+}
+.counter-item h2 {
+  font-size: 35px;
+  color: #676767;
+}
+.counter-item p {
+  font-size: 18px;
+  color: #676767;
+}
 /*  =====Testimonial Section =====  */
 .testiomonal-items-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
+}
+.testimonial-item {
+  margin-top: 20px;
+  padding: 20px;
+  box-shadow: 10px 10px 30px 10px rgba(0, 0, 0, 0.15);
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+}
+.testimonial-item img {
+  display: block;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  margin-bottom: 20px;
+}
+.testimonial-item h4 {
+  color: #676767;
+}
+
+/* ===== FAQ Section ===== */
+.faq-section {
+  background-image: url(images/half-circle.png);
+  background-repeat: no-repeat;
+  background-size: 100px;
+  background-position: right top;
+}
+.faq-item {
+  margin-top: 30px;
+}
+.faq-item h3 {
+  color: #454545;
+  margin-bottom: 16px;
+}
+.faq-item p {
+  font-size: 18px;
+  color: #656565;
 }
 
 /* ===== Footer Section  ===== */
@@ -90,4 +240,24 @@ footer {
   background-color: #0b0d17;
   padding: 55px 0 100px;
   color: #f8f8f8;
+}
+footer h2 {
+  font-size: 35px;
+  font-weight: 500;
+  margin-bottom: 12px;
+}
+footer p {
+  margin-bottom: 50px;
+}
+.social-link {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social-link li a {
+  display: block;
+  color: #f8f8f8;
+  font-size: 18px;
+  margin-right: 14px;
 }
