--- a/style.css
+++ b/style.css
@@ -416,6 +416,9 @@ footer p {
   section {
     padding: 120px 40px;
   }
+  nav {
+    padding: 0 40px;
+  }
   .banner-section {
     flex-direction: column-reverse;
   }
@@ -451,5 +454,14 @@ footer p {
   }
   .testimonial-item img {
     margin: 20px auto;
+  }
+}
+
+@media only screen and (max-width: 667px) {
+  .banner-left h1 {
+    font-size: 45px;
+  }
+  .top-content p {
+    width: 80%;
   }
 }
